--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,10 @@
 name: test-first-gha
+on: workflow_dispatch
+jobs:
+  first-job:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: print greeting
+        run: echo "hello"
+      - name: print bye
+        run: echo "bye"
